# libtext

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  bootstrap  config.status  configure  configure.in  configure.scan  libtool
config/: mkinstalldirs
test/: Makefile.am  Makefile.in  makeit  reps.c  repsn.c  tstfnd.c
text/: Makefile.am  Makefile.in  text.c  text.h
